2006-09-19    <swagiaal@redhat.com>

	* TestSyscallsWithAudit.java: New file.
	* LinuxIa32Syscall.java: Fixed all discrepencies with Audit libs.

2006-09-18  Tom Tromey  <tromey@redhat.com>

	* LinuxX8664Syscall.java (unknownSyscalls): Initialize.
	* LinuxPPC.java (unknownSyscalls): Initialize.
	* LinuxPPC64.java (unknownSyscalls): Initialize.
	* LinuxPowerPCSyscall.java (unknownSyscalls): Initialize.
	* LinuxIa32Syscall.java (unknownSyscalls): Initialize.
	* LinuxEMT64.java (unknownSyscalls): Initialize.
	* Syscall.java (syscallByName): Chain exceptions.  Don't "over
	catch".
	(iterateSyscallByName): Now package-private.
	(syscallByNum): Removed redundant toString.  Chain exceptions.
	Removed dead code.  Synchronize on hash map.

2006-09-18  Mike Cvet  <mcvet@redhat.com>

	* Task.java (getDwflLineXXX): Added, takes a long address parameter.

2006-09-18  Mark Wielaard  <mark@klomp.org>

	Fixes bug #3193
	* TestSyscallRunning (SyscallObserver): Take syscall name and
	whether the syscall is in an entered state. Use Syscall.getByName()
	for accept.

2006-09-15  Andrew Cagney  <cagney@redhat.com>

	* Host.java (logger): Remove "public" designation.

2006-09-14  Yao Qi  <qiyaoltc@cn.ibm.com>

	* Isa.java (getSyscallList): New method.
	(getUnknownSyscalls): Likewise.
	(syscallByName): Likewise.
	
	* IsaEMT64.java: Implement them.
	* IsaIA32.java: Likewise.
	* IsaPPC.java: Likewise.
	* IsaPPC64.java: Likewise.

	* LinuxPowerPCSyscall.java: New file.
	* LinuxX8664Syscall.java: New file.
	* LinuxIa32Syscall.java: New file.

	* LinuxIa32.java (returnCode): Remvoed.
	(arg): Removed.
	* LinuxEMT64.java: Likewise.
	* LinuxPPC.java: Likewise.
	* LinuxPPC64.java: Likewise.

	* Syscall.java (iterateSyscallByName): New method. 

	* SyscallEventInfo.java (getSyscall): New abstract method.
	(arg): New method.
	(returnCode): Likewise.
	
	Tom Tromey  <tromey@redhat.com>

	* Syscall.java (syscallByNum): Updated javadoc.  Fixed typo.
	Cache unknown syscalls.